@@ -1,0 +1,5 @@
+package Herp;
+
+sub noise {}
+
+1;
