@@ -1,0 +1,7 @@
+package VerifySchema::ResultSet::A;
+
+use DBIx::Class::Candy::ResultSet;
+
+use base 'Herp';
+
+1;
